# OZ_BE

./: README.md
Mini Project/: Mini Project.code-workspace  __2__16__nearme_chrome.py  __2__18__Kream.py  __2__18__near.py  __2__7__nearme.py  __2__7__nearme_safari.py  __2__7__plan.py  ewer.py  fgj.py
OS/: 01.py  13.txt  32_RoundRobin.py
oz-Django/: db.sqlite3  pyproject.toml
oz-Django/OZ-MachineLearning/DataAnalysis/: __03__12__.ipynb
oz-Django/boards/: admin.py  models.py
oz-Django/boards/migrations/: 0001_initial.py  0002_board_created_at_board_updated_at.py  0003_board_user.py
oz-Django/common/: models.py
oz-Django/config/: authentication.py  settings.py  urls.py
oz-Django/django-backend-youtube/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.dev.txt  requirements.txt
oz-Django/django-backend-youtube/.github/workflows/: checks.yml
oz-Django/django-backend-youtube/app/: .flake8
oz-Django/django-backend-youtube/app/app/: settings.py
oz-Django/feeds/: admin.py  models.py  serializers.py  urls.py  views.py
oz-Django/feeds/migrations/: 0001_initial.py
oz-Django/reviews/: admin.py  models.py  serializers.py  urls.py  views.py
oz-Django/reviews/migrations/: 0001_initial.py
oz-Django/users/: admin.py  models.py  serializers.py  urls.py  views.py
oz-Django/users/migrations/: 0001_initial.py  0002_user_is_business.py  0003_user_grade.py
새싹반/ss_django/: .env  db.sqlite3  pyproject.toml
새싹반/ss_django/config/: settings.py
새싹반/ss_django/users/: models.py
새싹반/ss_django/users/migrations/: 0001_initial.py
(+127 files in other folders)
