[tool.poetry]
name = "oz-django"
version = "0.1.0"
description = "oz python django project"
authors = ["hotbari <ghkahr01@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
